argocd/epic-games/manifests/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epic-games
  labels:
    app: epic-games
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: epic-games
  template:
    metadata:
      labels:
        app: epic-games
    spec:
      containers:
        - name: epic-games
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
          image: harbor.yanello.net/ghcr/claabs/epicgames-freegames-node:debian@sha256:cc82c0ec311493874f360a4152d7d984b097533b88db1ff40a526096281c6cbd
          volumeMounts:
            - mountPath: /usr/app/config/config.json5
              name: config
              subPath: config
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 1m
              memory: 300Mi
      volumes:
        - name: config
          secret:
            secretName: epic-games-config
