argocd/epic-games/manifests/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: epic-games
  labels:
    app: epic-games
  annotations: null
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: epic-games
