argocd/epic-games/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: epic-games-http-route
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - epic.yanello.net
  rules:
    - backendRefs:
        - name: epic-games
          port: 3000
