argocd/epic-games/manifests/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: epic-games
spec:
  endpointSelector:
    matchLabels:
      app: epic-games
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cilium
            k8s-app: cilium-envoy
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "587"
              protocol: TCP
            - port: "465"
              protocol: TCP
